smart-campus-client-parent/smart-campus-client-web/src/main/resources/static/styles/main.css
/* ... */
.dashboard-page .nav-sidebar {
    margin: 20px -21px 20px -20px
}

.dashboard-page .nav-sidebar > li > a {
    color: #fff;
    padding-right: 20px;
    padding-left: 20px
}

.dashboard-page .main {
    padding: 20px;
    position: absolute;
    top: 0;
    bottom: 0;
    overflow-x: hidden;
    overflow-y: auto
}

.dashboard-page .main .jumbotron {
    background: #fff;
    margin-top: 20px
}

@media (min-width: 768px) {
    .dashboard-page .main {
        padding-right: 40px;
        padding-left: 40px
    }
}

.dashboard-page .main .page-header {
    margin-top: 0
}

.dashboard-page .placeholders {
    margin-bottom: 30px;
    text-align: center
}

.dashboard-page .placeholders h4 {
    margin-bottom: 0
}

.dashboard-page .placeholder {
    margin-bottom: 20px
}

.dashboard-page .placeholder img {
    display: inline-block;
    border-radius: 50%
}

.dashboard-page .bg-fade {
    font-size: 500px;
    color: rgba(0, 0, 0, .1);
    position: absolute;
    right: -100px;
    top: 200px
}

.input-underline {
    background: 0 0;
    border: none;
    box-shadow: none;
    border-bottom: 2px solid rgba(255, 255, 255, .4);
    color: #fff;
    border-radius: 0
}

.input-underline::-moz-placeholder {
    color: rgba(255, 255, 255, .7)
}

.input-underline::-ms-input-placeholder {
    color: rgba(255, 255, 255, .7)
}

.input-underline::-webkit-input-placeholder {
    color: rgba(255, 255, 255, .7)
}

.input-underline:focus {
    border-bottom: 2px solid #fff;
    box-shadow: none
}

.btn-outline {
    background: 0 0;
    border-color: transparent;
    font-weight: 400
}

.btn-outline:hover {
    background: 0 0;
    border-color: transparent
}

.btn-outline.btn-white {
    box-shadow: 0 0 0 2px rgba(255, 255, 255, .8) inset;
    color: rgba(255, 255, 255, .8)
}

.btn-outline.btn-white:hover {
    box-shadow: 0 0 0 2px #fff inset;
    color: #fff
}

.btn-outline.btn-primary {
    box-shadow: 0 0 0 2px #2089c9 inset;
    color: #2089c9
}

.btn-outline.btn-primary:hover {
    box-shadow: 0 0 0 2px #3ca2e0 inset;
    color: #3ca2e0
}

.btn-outline.btn-success {
    box-shadow: 0 0 0 2px #449d44 inset;
    color: #449d44
}

.btn-outline.btn-success:hover {
    box-shadow: 0 0 0 2px #5cb85c inset;
    color: #5cb85c
}

.btn-outline.btn-info {
    box-shadow: 0 0 0 2px #31b0d5 inset;
    color: #31b0d5
}

.btn-outline.btn-info:hover {
    box-shadow: 0 0 0 2px #5bc0de inset;
    color: #5bc0de
}

.btn-outline.btn-warning {
    box-shadow: 0 0 0 2px #ec971f inset;
    color: #ec971f
}

.btn-outline.btn-warning:hover {
    box-shadow: 0 0 0 2px #f0ad4e inset;
    color: #f0ad4e
}

.btn-outline.btn-danger {
    box-shadow: 0 0 0 2px #c9302c inset;
    color: #c9302c
}

.btn-outline.btn-danger:hover {
    box-shadow: 0 0 0 2px #d9534f inset;
    color: #d9534f
}

.btn-rounded {
    border-radius: 50px
}

[ui-view] {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0
}

.ui-view-container {
    position: relative
}

[ui-view].ng-enter, [ui-view].ng-leave {
    position: absolute;
    left: 0;
    right: 0;
    transition: all .5s ease-in-out
}

[ui-view].ng-enter {
    opacity: 0;
    transform: scale3d(.94, .94, .94)
}

[ui-view].ng-enter-active {
    opacity: 1;
    transform: scale3d(1, 1, 1)
}

[ui-view].ng-leave {
    opacity: 1;
    transform: translate3d(0, 0, 0)
}

[ui-view].ng-leave-active {
    opacity: 0;
    transform: translate3d(0, 0, 0)
}

.browsehappy {
    margin: .2em 0;
    background: #ccc;
    color: #000;
    padding: .2em 0
}

html, body {
    overflow: hidden
}

/* Grow */
.hvr-grow {
    display: inline-block;
    vertical-align: middle;
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px transparent;
    transition-duration: 0.3s;
    transition-property: transform;
}
.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
    transform: scale(1.1);
}

/* Sweep To Right */
.hvr-sweep-to-right {
    display: inline-block;
    vertical-align: middle;
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px transparent;
    position: relative;
    transition-property: color;
    transition-duration: 0.3s;
}

.hvr-sweep-to-right:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(255, 255, 255, .8);
    transform: scaleX(0);
    transform-origin: 0 50%;
    transition-property: transform;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
    color: #243085 !important;
}

.hvr-sweep-to-right:hover:before, .hvr-sweep-to-right:focus:before, .hvr-sweep-to-right:active:before {
    transform: scaleX(1);
}

/* Fade */
.hvr-fade {
    display: inline-block;
    vertical-align: middle;
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px transparent;
    overflow: hidden;
    transition-duration: 0.3s;
    transition-property: color, background-color;
}
.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
    background: #fff;
    color: #243085 !important;
}

